--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,81 +1,390 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 47.4% 11.2%;
-
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 47.4% 11.2%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 47.4% 11.2%;
-
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-
-    --destructive: 0 100% 50%;
-    --destructive-foreground: 210 40% 98%;
-
-    --ring: 215 20.2% 65.1%;
-
-    --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: 224 71% 4%;
-    --foreground: 213 31% 91%;
-
-    --muted: 223 47% 11%;
-    --muted-foreground: 215.4 16.3% 56.9%;
-
-    --popover: 224 71% 4%;
-    --popover-foreground: 215 20.2% 65.1%;
-
-    --card: 224 71% 4%;
-    --card-foreground: 213 31% 91%;
-
-    --border: 216 34% 17%;
-    --input: 216 34% 17%;
-
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 1.2%;
-
-    --secondary: 222.2 47.4% 11.2%;
-    --secondary-foreground: 210 40% 98%;
-
-    --accent: 216 34% 17%;
-    --accent-foreground: 210 40% 98%;
-
-    --destructive: 0 63% 31%;
-    --destructive-foreground: 210 40% 98%;
-
-    --ring: 216 34% 17%;
-
-    --radius: 0.5rem;
-  }
+ * {
+	 margin: 0;
+	 padding: 0;
+	 box-sizing: border-box;
+	 font-family: "Inter", sans-serif;
+}
+ :root {
+	 --gray-25: #fcfcfd;
+	 --gray-50: #f9fafb;
+	 --gray-100: #f2f4f7;
+	 --gray-200: #eaecf0;
+	 --gray-300: #d0d5dd;
+	 --gray-400: #98a2b3;
+	 --gray-500: #667085;
+	 --gray-600: #475467;
+	 --gray-700: #344054;
+	 --gray-800: #1d2939;
+	 --gray-900: #101828;
+	 --primary-25: #fcfaff;
+	 --primary-50: #f9f5ff;
+	 --primary-100: #f4ebff;
+	 --primary-200: #e9d7fe;
+	 --primary-300: #d6bbfb;
+	 --primary-400: #b692f6;
+	 --primary-500: #9e77ed;
+	 --primary-600: #7f56d9;
+	 --primary-700: #6941c6;
+	 --primary-800: #53389e;
+	 --primary-900: #42307d;
+	 --success-50: #ecfdf3;
+	 --success-500: #12b76a;
+	 --success-700: #027a48;
+	 --warning-50: #fffaeb;
+	 --warning-500: #f79009;
+	 --warning-700: #b54708;
+	 --error-50: #fef3f2;
+	 --error-500: #f04438;
+	 --error-700: #b42318;
+	 --font-size-display-2xl: 4.5rem;
+	 --font-size-display-xl: 3.75rem;
+	 --font-size-display-lg: 3rem;
+	 --font-size-display-md: 2.25rem;
+	 --font-size-display-sm: 1.875rem;
+	 --font-size-display-xs: 1.5rem;
+	 --font-size-text-xl: 1.25rem;
+	 --font-size-text-lg: 1.125rem;
+	 --font-size-text-md: 1rem;
+	 --font-size-text-sm: 0.875rem;
+	 --font-size-text-xs: 0.75rem;
+	 --font-weight-regular: 400;
+	 --font-weight-medium: 500;
+	 --font-weight-semibold: 600;
+	 --shadow-xs--primary: 1px 2px rgba(16, 24, 40, 0.05);
+	 --shadow-xs: 0px 1px 2px rgba(16, 24, 40, 0.05);
+	 --shadow-sm: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
+	 --shadow-md: 0px 4px 8px -2px rgba(16, 24, 40, 0.1), 0px 2px 4px -2px rgba(16, 24, 40, 0.06);
+	 --shadow-lg: 0px 12px 16px -4px rgba(16, 24, 40, 0.08), 0px 4px 6px -2px rgba(16, 24, 40, 0.03);
+	 --shadow-xl: 0px 20px 24px -4px rgba(16, 24, 40, 0.08), 0px 8px 8px -4px rgba(16, 24, 40, 0.03);
+	 --shadow-2xl: 0px 24px 48px -12px rgba(16, 24, 40, 0.18);
+	 --shadow-3xl: 0px 32px 64px -12px rgba(16, 24, 40, 0.14);
+}
+ a {
+	 text-decoration: none;
+}
+ li {
+	 list-style-type: none;
+}
+ h2 {
+	 font-size: var(--font-size-display-md);
+	 color: var(--gray-900);
+	 font-weight: var(--font-weight-medium);
+}
+ .flex {
+	 display: flex !important;
+}
+ .column {
+	 flex-direction: column !important;
+}
+ .justify-center {
+	 justify-content: center !important;
+}
+ .space-between {
+	 justify-content: space-between !important;
+}
+ .align-center {
+	 align-items: center !important;
+}
+ .w-100 {
+	 width: 100% !important;
+}
+ .vh-100 {
+	 height: 100vh !important;
+}
+ .g-4 {
+	 gap: 4px;
+}
+ .g-6 {
+	 gap: 6px;
+}
+ .g-10 {
+	 gap: 10px;
+}
+ .g-12 {
+	 gap: 0.75rem;
+}
+ .g-16 {
+	 gap: 1rem;
+}
+ .g-20 {
+	 gap: 20px;
+}
+ .g-32 {
+	 gap: 2rem;
+}
+ .p-16 {
+	 padding: 1rem;
+}
+ .p-left-16 {
+	 padding-left: 1rem;
+}
+ .m-2 {
+	 margin: 2rem;
+}
+ .mb-20 {
+	 margin-bottom: 20px;
+}
+ .mb-32 {
+	 margin-bottom: 2rem;
+}
+ .text-center {
+	 text-align: center !important;
+}
+ .overflow-y {
+	 overflow: hidden;
+}
+ .d-none {
+	 display: none;
+}
+ .welcome-back {
+	 font-size: var(--font-size-display-sm);
+}
+ input, select {
+	 background: #fff;
+	 padding: 10px 14px;
+	 width: 100%;
+	 outline: 1px solid var(--gray-300);
+	 border: 1px solid transparent;
+	 margin-top: 6px;
+	 box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+	 border-radius: 8px;
+	 color: var(gray-900);
+	 -webkit-transition: 0.1s;
+}
+ input:focus, select:focus {
+	 outline: 1px solid var(--primary-100);
+	 border: 1px solid #d6bbfb;
+	 box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #f4ebff;
+	 border-radius: 8px;
+}
+ input::placeholder, select::placeholder {
+	 color: var(gray-500);
+}
+ .input-error {
+	 border: 1px solid #fda29b;
+	 outline: none;
+	 box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #fee4e2;
+}
+ .input-error::after {
+	 content: "eho";
+}
+ .loader {
+	 width: 20px;
+	 height: 20px;
+	 border: 2px solid #fff;
+	 border-bottom-color: transparent;
+	 border-radius: 50%;
+	 display: inline-block;
+	 box-sizing: border-box;
+	 animation: rotation 1s linear infinite;
+}
+ @keyframes rotation {
+	 0% {
+		 transform: rotate(0deg);
+	}
+	 100% {
+		 transform: rotate(360deg);
+	}
+}
+ button {
+	 border: 0;
+	 background: none;
+	 cursor: pointer;
+}
+ .no {
+	 color: var(--gray-500);
+	 font-size: var(--font-size-text-sm);
+	 font-weight: var(--font-weight-semibold);
+}
+ .no:hover {
+	 color: var(--gray-700);
+}
+ .yes {
+	 color: var(--primary-700);
+	 font-size: var(--font-size-text-sm);
+	 font-weight: var(--font-weight-semibold);
+}
+ .yes:hover {
+	 color: var(--primary-800);
+}
+ .progressbar {
+	 width: 100%;
+	 height: 8px;
+	 background: var(--primary-100);
+	 border-radius: 4px;
+}
+ main {
+	 margin-left: 82px;
+	 padding: 2rem;
+}
+ @media (max-width: 768px) {
+	 main {
+		 padding: 12px;
+		 margin-left: 0;
+	}
+}
+ .hover-active:hover {
+	 width: 312px !important;
+	 box-shadow: var(--shadow-xs);
+	 width: 312px;
+	 background: white;
+}
+ .hover-active:hover .info, .hover-active:hover input, .hover-active:hover .link-name, .hover-active:hover .profile-information, .hover-active:hover .profile button {
+	 display: block;
+	 opacity: 1;
+	 transform: translateX(0);
+	 transition: opacity 0.2s ease, transform 0.2s ease;
+}
+ .hover-active:hover li {
+	 display: block;
+	 justify-content: flex-start;
+}
+ .hover-active:hover .profile {
+	 display: block;
+	 justify-content: center;
+}
+ .hover-active:hover .profile button {
+	 display: block;
+}
+ .mobile-nav-open {
+	 box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08), 0px 4px 6px -2px rgba(16, 24, 40, 0.03);
+	 border-radius: 8px;
+	 padding: 1rem;
+	 padding-bottom: 24px;
+	 padding-top: 24px;
+}
+ .mobile-nav-open li a {
+	 color: var(--gray-900);
+	 font-weight: var(--font-weight-medium);
+}
+ .pending-status {
+	 background: red;
+}
+ .table-container {
+	 width: 100%;
+}
+ @media (max-width: 768px) {
+	 .table-container {
+		 overflow-x: auto;
+	}
+}
+ .dot {
+	 width: 7px;
+	 height: 7px;
+	 border-radius: 50%;
+}
+ .dot-success {
+	 background: var(--success-500);
+}
+ .dot-error {
+	 background: var(--error-500);
+}
+.dot-warning {
+  background: var(--warning-500)
 }
 
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-    font-feature-settings: "rlig" 1, "calt" 1;
-  }
+ table {
+	 border: 1px solid var(--gray-200);
+	 box-shadow: var(--shadow-md);
+	 border-radius: 8px;
+	 border-spacing: 0px !important;
+	 text-align: start;
 }
+ table thead {
+	 background: var(--gray-50);
+}
+ table thead th {
+	 text-align: start;
+	 padding: 13px 0px 13px 24px;
+	 color: var(--gray-500);
+	 border-bottom: 1px solid var(--gray-200);
+	 font-size: var(--font-size-text-xs);
+	 font-weight: var(--font-weight-medium);
+}
+ table thead th:first-of-type {
+	 border-top-left-radius: 8px;
+}
+ table thead th:last-of-type {
+	 border-top-right-radius: 8px;
+}
+ table tbody td {
+	 padding: 1rem 0px 1rem 24px;
+	 border-bottom: 1px solid var(--gray-200);
+}
+ table .project-title {
+	 color: var(--gray-900);
+	 font-size: var(--font-size-text-sm);
+	 font-weight: var(--font-weight-medium);
+}
+ table .status-cell {
+	 font-size: var(--font-size-text-xs);
+	 font-weight: var(--font-weight-medium);
+	 padding: 2px 8px;
+	 border-radius: 1rem;
+}
+ table .status-pending {
+	 background: var(--gray-100);
+	 color: var(--gray-700);
+	 padding: 2px 8px;
+	 border-radius: 1rem;
+}
+ table .status-completed {
+	 background: var(--success-50);
+	 color: var(--success-700);
+	 padding: 2px 8px;
+	 border-radius: 1rem;
+}
+ table .status-error {
+	 background: var(--error-50);
+	 color: var(--error-700);
+}
+ table .project-link {
+	 color: var(--gray-500);
+	 font-weight: var(--font-weight-regular);
+}
+ table .table-primary, table .table-secondary {
+	 font-size: var(--font-size-text-sm);
+	 font-weight: var(--font-weight-regular);
+}
+ table .table-primary {
+	 color: var(--gray-900);
+}
+ table .table-secondary {
+	 color: var(--gray-500);
+}
+ .lost {
+	 font-size: var(--font-size-text-sm);
+}
+ #action-svg {
+	 transition: stroke 0.1s ease-in-out;
+}
+ .action-btn:hover #action-svg {
+	 stroke: #464d5b;
+}
+ .mobile-nav {
+	 display: none;
+}
+ @media (max-width: 768px) {
+	 main {
+		 margin-top: 2rem;
+	}
+	 .mobile-nav {
+		 display: block;
+		 display: flex;
+		 box-shadow: var(--shadow-sm);
+	}
+	 h1 {
+		 padding-top: 2rem;
+	}
+	 h2 {
+		 font-size: var(--font-size-display-xs);
+	}
+	 .page-header {
+		 flex-direction: column;
+		 gap: 1rem;
+	}
+	 table .project-desc {
+		 display: none;
+	}
+}
+ 
