--- a/styles/globals.css
+++ b/styles/globals.css
@@ -278,7 +278,6 @@
 }
 
 .popup-content {
-	width: 12%;
 	border-radius: 8px !important;
 	padding: 16px;
 }
@@ -427,6 +426,11 @@
 	}
 	 table .project-desc {
 		 display: none;
+	}
+	.popup-content {
+		width: 100%;
+		border-radius: 8px !important;
+		padding: 16px;
 	}
 }
  
